argo/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterscope-postgres
  labels:
    app: clusterscope-postgres
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: clusterscope-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
